--- a/OauthWebApiTocken/TimeTrackMvcWebApiAngularApi/Web.config
+++ b/OauthWebApiTocken/TimeTrackMvcWebApiAngularApi/Web.config
@@ -61,6 +61,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AuthContext" connectionString="Data Source=.\sqlexpress;Initial Catalog=AngularJSAuth1;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="AuthContext" connectionString="Data Source=.\sqlexpress;Initial Catalog=TimeTrack;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
