new registration user

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
@@ -138,6 +138,7 @@
     <Content Include="Scripts\application\controllers\homeController.js" />
     <Content Include="Scripts\application\controllers\contactController.js" />
     <Content Include="Scripts\application\router.js" />
+    <Content Include="Scripts\application\services\authService.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\fonts\fontawesome-webfont.eot" />
@@ -197,8 +198,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Shared\LegacyIE.cshtml" />
@@ -209,8 +208,6 @@
     <Content Include="Views\ClientViews\Contact.cshtml" />
     <Content Include="Views\ClientViews\Login.cshtml" />
     <Content Include="Views\ClientViews\Signup.cshtml" />
-    <None Include="Views\Home\test.cshtml" />
-    <Content Include="Views\Test\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -218,7 +215,6 @@
     <Folder Include="Infrastructure\" />
     <Folder Include="Models\" />
     <Folder Include="Scripts\application\directives\" />
-    <Folder Include="Scripts\application\services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
