add interceptor factory

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
@@ -112,7 +112,6 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -137,6 +136,7 @@
     <Content Include="Scripts\application\controllers\aboutController.js" />
     <Content Include="Scripts\application\controllers\homeController.js" />
     <Content Include="Scripts\application\controllers\contactController.js" />
+    <Content Include="Scripts\application\factory\authInterceptorService.js" />
     <Content Include="Scripts\application\router.js" />
     <Content Include="Scripts\application\services\authService.js" />
     <Content Include="Scripts\bootstrap.js" />
