--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
@@ -112,9 +112,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\UsersClientViewExtensions.cs" />
     <Compile Include="Helpers\ClientViewExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -140,6 +142,9 @@
     <Content Include="Scripts\application\factory\authInterceptorService.js" />
     <Content Include="Scripts\application\router.js" />
     <Content Include="Scripts\application\services\authService.js" />
+    <Content Include="Scripts\application\usersApplication\application.js" />
+    <Content Include="Scripts\application\usersApplication\controllers\userController.js" />
+    <Content Include="Scripts\application\usersApplication\router.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\fonts\fontawesome-webfont.eot" />
@@ -209,6 +214,9 @@
     <Content Include="Views\ClientViews\Contact.cshtml" />
     <Content Include="Views\ClientViews\Login.cshtml" />
     <Content Include="Views\ClientViews\Signup.cshtml" />
+    <Content Include="Views\Shared\_UsersLayout.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\UsersViews\User.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -216,6 +224,9 @@
     <Folder Include="Infrastructure\" />
     <Folder Include="Models\" />
     <Folder Include="Scripts\application\directives\" />
+    <Folder Include="Scripts\application\usersApplication\directives\" />
+    <Folder Include="Scripts\application\usersApplication\factory\" />
+    <Folder Include="Scripts\application\usersApplication\services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
