add local storage service fix localstorage issue add underscore

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
@@ -142,6 +142,7 @@
     <Content Include="Scripts\application\factory\authInterceptorService.js" />
     <Content Include="Scripts\application\router.js" />
     <Content Include="Scripts\application\services\authService.js" />
+    <Content Include="Scripts\application\services\localStorageService.js" />
     <Content Include="Scripts\application\usersApplication\application.js" />
     <Content Include="Scripts\application\usersApplication\controllers\usertimeController.js" />
     <Content Include="Scripts\application\usersApplication\controllers\newprojectController.js" />
