--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
@@ -144,6 +144,7 @@
     <Content Include="Scripts\application\services\authService.js" />
     <Content Include="Scripts\application\services\localStorageService.js" />
     <Content Include="Scripts\application\usersApplication\application.js" />
+    <Content Include="Scripts\application\usersApplication\controllers\logoutController.js" />
     <Content Include="Scripts\application\usersApplication\controllers\usertimeController.js" />
     <Content Include="Scripts\application\usersApplication\controllers\newprojectController.js" />
     <Content Include="Scripts\application\usersApplication\controllers\newuserController.js" />
