--- a/OauthWebApiTocken/TimeTrackMvcWebApiAngularApi/TimeTrackMvcWebApiAngularApi.csproj
+++ b/OauthWebApiTocken/TimeTrackMvcWebApiAngularApi/TimeTrackMvcWebApiAngularApi.csproj
@@ -181,7 +181,7 @@
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\RefreshTokensController.cs" />
     <Compile Include="Entities\Client.cs" />
-    <Compile Include="Entities\Project.cs" />
+    <Compile Include="Models\Project.cs" />
     <Compile Include="Entities\RefreshToken.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="Models\Enum.cs" />
