--- a/OauthWebApiTocken/TimeTrackMvcWebApiAngularApi/TimeTrackMvcWebApiAngularApi.csproj
+++ b/OauthWebApiTocken/TimeTrackMvcWebApiAngularApi/TimeTrackMvcWebApiAngularApi.csproj
@@ -181,6 +181,11 @@
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\RefreshTokensController.cs" />
     <Compile Include="Entities\Client.cs" />
+    <Compile Include="Migrations\201412220818459_InitialCreate.cs" />
+    <Compile Include="Migrations\201412220818459_InitialCreate.Designer.cs">
+      <DependentUpon>201412220818459_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Entities\RefreshToken.cs" />
     <Compile Include="Helper.cs" />
@@ -213,6 +218,11 @@
     <Folder Include="Views\Orders\" />
     <Folder Include="Views\Projects\" />
     <Folder Include="Views\RefreshTokens\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201412220818459_InitialCreate.resx">
+      <DependentUpon>201412220818459_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
