--- a/OauthWebApiTocken/TimeTrackMvcWebApiAngularApi/TimeTrackMvcWebApiAngularApi.csproj
+++ b/OauthWebApiTocken/TimeTrackMvcWebApiAngularApi/TimeTrackMvcWebApiAngularApi.csproj
@@ -177,11 +177,13 @@
     <Compile Include="AuthContext.cs" />
     <Compile Include="AuthRepository.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ClientProjectController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\RefreshTokensController.cs" />
     <Compile Include="Entities\Client.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ClientProject.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Entities\RefreshToken.cs" />
     <Compile Include="Helper.cs" />
@@ -211,6 +213,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Views\Client\" />
     <Folder Include="Views\Orders\" />
     <Folder Include="Views\Projects\" />
     <Folder Include="Views\RefreshTokens\" />
