--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular.csproj
@@ -147,6 +147,7 @@
     <Content Include="Scripts\application\services\service.js" />
     <Content Include="Scripts\application\usersApplication\application.js" />
     <Content Include="Scripts\application\usersApplication\controllers\logoutController.js" />
+    <Content Include="Scripts\application\usersApplication\controllers\editclientProjectController.js" />
     <Content Include="Scripts\application\usersApplication\controllers\newclientProjectController.js" />
     <Content Include="Scripts\application\usersApplication\controllers\clientlistController.js" />
     <Content Include="Scripts\application\usersApplication\controllers\usertimeController.js" />
@@ -247,6 +248,7 @@
     <Content Include="Views\UsersViews\Usertime.cshtml" />
     <Content Include="Views\UsersViews\Newclientproject.cshtml" />
     <Content Include="Views\UsersViews\Clientlist.cshtml" />
+    <Content Include="Views\UsersViews\Editclientproject.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
